Update colors to avoid the near-unreadable blue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ a:hover {
 /* Syntax highlighter colors. */
 .highlight .hll { background-color: #222222 }
 .highlight  { background: #0c0c0c; color: #cccccc }
-.highlight .c { color: #000080 } /* Comment */
+.highlight .c { color: var(--fg-color-primary) } /* Comment */
 .highlight .err { color: #cccccc; border: 1px solid #FF0000 } /* Error */
 .highlight .esc { color: #cccccc } /* Escape */
 .highlight .g { color: #cccccc } /* Generic */
@@ -164,19 +164,19 @@ a:hover {
 .highlight .o { color: #3399cc } /* Operator */
 .highlight .x { color: #cccccc } /* Other */
 .highlight .p { color: #cccccc } /* Punctuation */
-.highlight .ch { color: #000080 } /* Comment.Hashbang */
-.highlight .cm { color: #000080 } /* Comment.Multiline */
+.highlight .ch { color: var(--fg-color-primary) } /* Comment.Hashbang */
+.highlight .cm { color: var(--fg-color-primary) } /* Comment.Multiline */
 .highlight .cp { color: #3030C0 } /* Comment.Preproc */
-.highlight .cpf { color: #000080 } /* Comment.PreprocFile */
-.highlight .c1 { color: #000080 } /* Comment.Single */
+.highlight .cpf { color: var(--fg-color-primary) } /* Comment.PreprocFile */
+.highlight .c1 { color: var(--fg-color-primary) } /* Comment.Single */
 .highlight .cs { color: #cd0000; font-weight: bold } /* Comment.Special */
 .highlight .gd { color: #cd0000 } /* Generic.Deleted */
 .highlight .ge { color: #cccccc; font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #FF0000 } /* Generic.Error */
-.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.highlight .gh { color: #0030F0; font-weight: bold } /* Generic.Heading */
 .highlight .gi { color: #00cd00 } /* Generic.Inserted */
 .highlight .go { color: #888888 } /* Generic.Output */
-.highlight .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
+.highlight .gp { color: #0030F0; font-weight: bold } /* Generic.Prompt */
 .highlight .gs { color: #cccccc; font-weight: bold } /* Generic.Strong */
 .highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
 .highlight .gt { color: #0044DD } /* Generic.Traceback */
